docs/api/qiskit/0.39/qiskit_aer.noise.device.basic_device_gate_errors.md
---
title: basic_device_gate_errors
description: API reference for qiskit_aer.noise.device.basic_device_gate_errors
in_page_toc_min_heading_level: 1
python_api_type: function
python_api_name: qiskit_aer.noise.device.basic_device_gate_errors
---

# qiskit\_aer.noise.device.basic\_device\_gate\_errors

<span id="qiskit_aer.noise.device.basic_device_gate_errors" />

`basic_device_gate_errors(properties, gate_error=True, thermal_relaxation=True, gate_lengths=None, gate_length_units='ns', temperature=0, standard_gates=None, warnings=None, target=None)`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.39/qiskit_aer/noise/device/models.py "view source code")

Return QuantumErrors derived from a devices BackendProperties.

If non-default values are used gate\_lengths should be a list of tuples `(name, qubits, value)` where `name` is the gate name string, `qubits` is either a list of qubits or `None` to apply gate time to this gate one any set of qubits, and `value` is the gate time in nanoseconds.

**Parameters**

*   **properties** ([*BackendProperties*](qiskit.providers.models.BackendProperties "qiskit.providers.models.BackendProperties")) – device backend properties
*   **gate\_error** (*bool*) – Include depolarizing gate errors (Default: True).
*   **thermal\_relaxation** (*Bool*) – Include thermal relaxation errors (Default: True).
*   **gate\_lengths** (*list*) – Override device gate times with custom values. If None use gate times from backend properties. (Default: None).
*   **gate\_length\_units** (*str*) – Time units for gate length values in gate\_lengths. Can be ‘ns’, ‘ms’, ‘us’, or ‘s’ (Default: ‘ns’).
*   **temperature** (*double*) – qubit temperature in milli-Kelvin (mK) (Default: 0).
*   **standard\_gates** (*bool*) – DEPRECATED, If true return errors as standard qobj gates. If false return as unitary qobj instructions (Default: None).
*   **warnings** (*bool*) – PLAN TO BE DEPRECATED, Display warnings (Default: None).
*   **target** ([*Target*](qiskit.transpiler.Target "qiskit.transpiler.Target")) – device backend target (Default: None). When this is supplied, several options are disabled: properties, gate\_lengths and gate\_length\_units are not used during the construction of gate errors. Default values are always used for standard\_gates and warnings.

**Returns**

A list of tuples `(label, qubits, QuantumError)`, for gates with non-zero quantum error terms, where label is the label of the noisy gate, qubits is the list of qubits for the gate.

**Return type**

list

**Raises**

**NoiseError** – If invalid arguments are supplied.

